--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,63 +1,20 @@
 services:
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: laravel-app
+    container_name: portofolio-webApp
+    restart: unless-stopped
     volumes:
-      - .:/var/www
+      - ./:/var/www/html
     ports:
-      - "8082"
+      - "8000:80"
     networks:
       - laravel
-
-  nginx:
-    image: nginx:latest
-    volumes:
-      - .:/var/www
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-    ports:
-      - "8089:80"
-    depends_on:
-      - app
-    networks:
-      - laravel
-
-  db:
-    image: mariadb
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel
-    ports:
-      - "3308:3306"
-    networks:
-      - laravel
-  redis:
-    image: redis:latest
-    ports:
-      - "6379:6379"
-    networks:
-      - laravel
-
-  prometheus:
-    image: prom/prometheus:latest
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - "9090:9090"
-    networks:
-      - laravel
-
-  grafana:
-    image: grafana/grafana:latest
-    container_name: grafana
-    ports:
-      - "3119:3000"
-    volumes:
-      - grafana-storage:/var/lib/grafana
-    networks:
-      - laravel
-
-volumes:
-  grafana-storage:
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 networks:
   laravel:
-
+    driver: bridge
